# piwx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  anim_8c.html  anim_8c__incl.dot  anim_8c__incl.map  anim_8c__incl.md5  anim_8h.html  anim_8h__dep__incl.dot  anim_8h__dep__incl.map  anim_8h__dep__incl.md5  anim_8h__incl.dot  anim_8h__incl.map  anim_8h__incl.md5  anim_8h_source.html  annotated.html  classes.html  conf.h  conf.l  conf.y  conf__file_8c.html  conf__file_8c__incl.dot  conf__file_8c__incl.map  conf__file_8c__incl.md5  conf__file_8h.html  conf__file_8h__dep__incl.dot  conf__file_8h__dep__incl.map  conf__file_8h__dep__incl.md5  conf__file_8h__incl.dot  conf__file_8h__incl.map  conf__file_8h__incl.md5  conf__file_8h_source.html  conf__file__prv_8h.html  conf__file__prv_8h__dep__incl.dot  conf__file__prv_8h__dep__incl.map  conf__file__prv_8h__dep__incl.md5  (+392 more)
cmake/: FindJansson.cmake  FindSIMD.cmake  FindWS2811.cmake
fonts/: sfmono10.h  sfmono16.h  sfmono6.h  sfmono8.h
parsers/: CMakeLists.txt  conf_parser.y
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  (+47 more)
share/wxicons/: wind_cone.afdesign
src/: CMakeLists.txt  anim.c  anim.h  conf_file.h  config.h.in  display.c  display.h  draw.c  draw.h  gfx.c  led.c  led.h  log.c  log.h  piwx.c  util.c  util.h  wx.c  wx.h
src/conf_file/: CMakeLists.txt  conf_file.c  conf_file.h  conf_file_prv.h  conf_lexer.l  conf_param.h  conf_parser.y  config.h.in
src/geo/: CMakeLists.txt  ecef.c  geo.h  geo_prv.h  sun.c
src/gfx/: CMakeLists.txt  draw.c  gfx.c  gfx.h  gfx_prv.h  globe.c  img.c  img.h  simd.c  simd.h  transform.c  transform.h  vec.c  vec.h
src/gfx/shaders/: alpha_tex.frag  alpha_tex_blur.frag  general.frag  general.vert  general3d.vert  globe.frag  globe.vert  rgba_tex.frag  shader_to_header.py
src/led/: CMakeLists.txt  led.c  led.h
src/log/: CMakeLists.txt  log.c  log.h
src/parsers/: CMakeLists.txt  conf_lexer.l  wx_lexer.l  wx_type.h
src/util/: CMakeLists.txt  util.c  util.h
src/wx/: CMakeLists.txt  wx.c  wx.h  wx_lexer.l  wx_type.h
support/cmake/: FindJansson.cmake  FindPiGPIO.cmake  FindWS2811.cmake  FindWiringPi.cmake
support/systemd/: piwx.service.example
test/: CMakeLists.txt  anim_test.c  cfg_test.c  config.h.in  geo_test.c  gfx_test.c  led_test.c  metar.xml  triangle.c
wxicons/: background.h  brokenday.h  brokennight.h  chance_flurries.h  chance_fzrain.h  chance_rain.h  chance_snow.h  chance_ts.h  fewday.h  fewnight.h  fghz.h  flurries.h  fzra.h  overcast.h  rain.h  skyclearday.h  skyclearnight.h  sleet.h  snow.h  thunderstorms.h
