#-------------------------------------------------------------------------------
# Setup the geo library.
#-------------------------------------------------------------------------------
add_library(geo STATIC sun.c)
target_include_directories(geo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

#-------------------------------------------------------------------------------
# Export the library.
#-------------------------------------------------------------------------------
add_library(Piwx::Geo ALIAS geo)
