#-------------------------------------------------------------------------------
# Setup the util library.
#-------------------------------------------------------------------------------
add_library(util STATIC util.c)
target_include_directories(util PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

#-------------------------------------------------------------------------------
# Export the library.
#-------------------------------------------------------------------------------
add_library(Piwx::Util ALIAS util)
